fixed login page elements alignment

--- a/src/app/components/pages/PageLogin/PageLogin.scss
+++ b/src/app/components/pages/PageLogin/PageLogin.scss
@@ -10,9 +10,10 @@
   }
 }
 .absolute-container {
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
+  margin-top: 30px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -21,6 +22,7 @@
 
 .login-btns {
   max-width: 30rem;
+  margin: auto;
   .btn-social {
     margin-top: 1rem;
     margin-bottom: 1rem;
